# duckdb-interlis

./: .gitignore  AGENTS.md  CHANGELOG.md  LLM_CODING_AGENT_INSTRUCTIONS_C_API-v6.md  README.md  build.gradle  duckdb-interlis-geometry-implementation-spec_v5.md  duckdb_interlis_extension_spec-v1.md  duckdb_interlis_extension_spec.md  gradle.properties  settings.gradle
.github/workflows/: ci.yml
docs/: VERSIONS.md  architecture.md  c-abi.md  current-api.md  error-handling.md  error-semantics.md  functions.md  getting-started.md  ilivalidator-caching-analysis.md  installation.md  limitations.md  native-abi.md  performance.md  production-readiness.md  security.md  troubleshooting.md  validation-profiles.md
duckdb-extension/: CMakeLists.txt  extension_config.cmake
duckdb-extension/src/: ili_duckdb_geometry.c  ili_duckdb_tsv.c  ili_duckdb_utils.c  ili_extension.c  ili_hex.c  ili_tsv.c  ili_typed_scan.c  ili_typed_schema.c  interlis_extension.c  interlis_geometry.cpp  sha256.c
duckdb-extension/src/include/: ili_duckdb_geometry.h  ili_duckdb_tsv.h  ili_duckdb_utils.h  ili_hex.h  ili_request.h  ili_sync.h  ili_tsv.h  ili_typed_scan.h  ili_typed_schema.h  interlis_geometry.h  sha256.h
duckdb-extension/test/: duckdb_extension_concurrency_test  duckdb_extension_concurrency_test.c  duckdb_extension_smoke_test  duckdb_extension_smoke_test.c  ili_tsv_test.c  native_smoke_test  native_smoke_test.c  tsan_suppressions.txt
duckdb-extension/test/duckdb_extension_concurrency_test.dSYM/Contents/: Info.plist
duckdb-extension/test/duckdb_extension_concurrency_test.dSYM/Contents/Resources/DWARF/: duckdb_extension_concurrency_test
duckdb-extension/test/duckdb_extension_concurrency_test.dSYM/Contents/Resources/Relocations/aarch64/: duckdb_extension_concurrency_test.yml
duckdb-extension/test/duckdb_extension_smoke_test.dSYM/Contents/: Info.plist
duckdb-extension/test/duckdb_extension_smoke_test.dSYM/Contents/Resources/DWARF/: duckdb_extension_smoke_test
duckdb-extension/test/duckdb_extension_smoke_test.dSYM/Contents/Resources/Relocations/aarch64/: duckdb_extension_smoke_test.yml
duckdb-extension/test/duckdb_extension_smoke_test_nosan.dSYM/Contents/: Info.plist
duckdb-extension/test/duckdb_extension_smoke_test_nosan.dSYM/Contents/Resources/DWARF/: duckdb_extension_smoke_test_nosan
duckdb-extension/test/duckdb_extension_smoke_test_nosan.dSYM/Contents/Resources/Relocations/aarch64/: duckdb_extension_smoke_test_nosan.yml
gradle/: verification-metadata.xml
java/ili-core/: build.gradle  gradle.lockfile
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/: CoreVersion.java  NativeError.java  NativeStatus.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/geometry/: ArcHandlingMode.java  CrsIdentifier.java  GeometryAttributeMetadataService.java  GeometryAttributeMissingException.java  GeometryConversionException.java  GeometryConversionOptions.java  GeometryCrsResolver.java  GeometryDimension.java  GeometryEncoding.java  GeometryKind.java  GeometryMetadata.java  GeometryMetadataContext.java  GeometryParsingException.java  GeometryValue.java  HexWkbCodec.java  InterlisGeometryEncoder.java  InterlisGeometryExtractor.java  InterlisGeometryTypeResolver.java  MapGeometryCrsResolver.java  NoopGeometryCrsResolver.java  UnsupportedGeometryException.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/importer/: IliImportService.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/logging/: IliLogger.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/model/: IliModelService.java  InterlisLogicalTypeMapper.java  ModelCache.java  ModelRepositoryResolver.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/sql/: SqlIdentifiers.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/transport/: TsvCodec.java
java/ili-core/src/main/java/ch/so/agi/duckdbili/core/validation/: IliValidatorService.java  ValidationExecutionException.java  (+4 more)
java/ili-core/src/test/java/ch/so/agi/duckdbili/core/: CoreVersionTest.java  NativeErrorTest.java  RegressionTest.java
java/ili-native/: build.gradle  gradle.lockfile
java/ili-native/src/main/java/ch/so/agi/duckdbili/nativeapi/: IliDirectives.java  IliRequest.java  NativeEntryPoints.java  NativeMemory.java  NativeRequestValidator.java  NativeResult.java  NativeVersion.java
java/ili-native/src/test/java/ch/so/agi/duckdbili/nativeapi/: NativeVersionTest.java
scripts/: build-all.sh  build-extension.sh  build-java.sh  build-native.sh  clean-local.sh  copy-native-to-extension.sh  dev-duckdb.sh  doctor.sh  download-testdata.sh  embed_native_lib.py  env.example.sh  env.sh  sanitizer-test.sh  smoke-test.sh  test-concurrency.sh  test-native.sh
spec/: duckdb-interlis-implementation-spec-v2.md  duckdb-interlis-pre-milestone-b-correction-spec-v4.md  duckdb-interlis-streaming-batching-implementation-spec-v3.md
sql/: associations.sql  concurrency.sql  import.sql  regression.sql  smoke.sql  spatial.sql  structures.sql  validate-external.sql
sql/examples/: 01-version.sql  02-validate.sql  03-inspect.sql  04-read-objects.sql  05-read-class.sql  06-read-structures.sql  07-read-association.sql  08-import.sql  09-geometry-attributes.sql  README.md
testdata/synthetic/associations/: SO_AGI_Associations_20260605.ili  valid.xtf
testdata/synthetic/comprehensive/: SO_AGI_Comprehensive_20260608.ili  invalid_multiplicity.xtf  invalid_type.xtf  invalid_xml.xtf  null_and_empty.xtf  truncated.xtf  unicode.xtf  valid.xtf
testdata/synthetic/geometries/: SO_AGI_Geometries_20260605.ili  broken_geom.xtf  valid-3d.xtf  valid-arcs.xtf  valid-holes.xtf  valid.xtf
testdata/synthetic/keywords/: SO_AGI_Keywords_20260609.ili  valid.xtf
testdata/synthetic/samenames/: SO_AGI_SameNames_20260608.ili  valid.xtf
testdata/synthetic/simple/: SO_AGI_Simple_20260605.ili  invalid.xtf  invalid_xml.xtf  multibasket.xtf  null_and_empty.xtf  operations.xtf  truncated.xtf  valid.xtf
testdata/synthetic/structures/: SO_AGI_Structures_20260605.ili  valid.xtf
testdata/synthetic/typedscalars/: SO_AGI_TypedScalars_20260611.ili  valid.xtf
(+15 files in other folders)
